src/objects/SWx_Upsell_Items__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Initiation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acceptance/Rejection Initiation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acceptance_Initiation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acceptance Initiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acceptance_of_Delivery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acceptance of Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acceptance_of_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acceptance of Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_in_Network_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Active in Network Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bundle_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SWx Items</relationshipLabel>
        <relationshipName>SWx_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPO_ID__c</fullName>
        <formula>Customer_PO_Item__r.Apttus_Config2__PurchaseOrderId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPO ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Entitlement</label>
        <referenceTo>Commercial_Entitlement__c</referenceTo>
        <relationshipLabel>SWx Items</relationshipLabel>
        <relationshipName>SWx_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer PO Item</label>
        <referenceTo>Apttus_Config2__CustomerPOItem__c</referenceTo>
        <relationshipLabel>SWx Items</relationshipLabel>
        <relationshipName>SWx_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Execution_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status_Prioirty__c</fullName>
        <description>To be used by DP Fulfillment batch</description>
        <formula>IF( ISPICKVAL(Entitlement_Status__c,&apos;Pending&apos;),1,if(ISPICKVAL(Entitlement_Status__c,&apos;Cannot be entitled&apos;) &amp;&amp; ISPICKVAL( SWx_Upsell_Proposal__r.Upsell_Status__c,&apos;Ready For Review&apos; ), 2, null))</formula>
        <label>Entitlement Status Prioirty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <label>Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Needed</fullName>
                </value>
                <value>
                    <fullName>Can Be Entitled</fullName>
                </value>
                <value>
                    <fullName>Entitled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cannot be entitled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Covered</fullName>
                    <isActive>false</isActive>
                    <label>Covered</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code_Account__c</fullName>
        <description>Product Code + Sold to Party, unique identifier for entitlements</description>
        <formula>CASESAFEID(SWx_Upsell_Proposal__r.Sold_To_Party__c ) + &apos;-&apos; + CASESAFEID(Sales_Item_Code__c)</formula>
        <label>Product Code Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Sales_Item_Code__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Sales_Item_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Possible Activation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_To_Convert_Image__c</fullName>
        <formula>IMAGE( 
IF( 
Ready_to_Convert__c, 
&quot;/resource/CorrectSign&quot;, 
&quot;/resource/WrongSign&quot; 
), &apos;NONE&apos;,20,20 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready To Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Convert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ready to Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SWx_Product_Code__c</fullName>
        <description>This field is used to populate product code of SWx line items</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWx_Upsell_Proposal__c</fullName>
        <label>SWx Upsell Proposal</label>
        <referenceTo>SWx_Upsell_Proposal__c</referenceTo>
        <relationshipName>SWx_Upsell_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Item_Code_SWx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Item_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Item Code</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SWx Items (Product)</relationshipLabel>
        <relationshipName>SWx_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_In_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active In Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Commercial_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Temp Commercial Entitlement</label>
        <referenceTo>Commercial_Entitlement__c</referenceTo>
        <relationshipLabel>SWx Items (Temp Commercial Entitlement)</relationshipLabel>
        <relationshipName>SWx_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Customer_PO_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Temp Customer PO Item</label>
        <referenceTo>Apttus_Config2__CustomerPOItem__c</referenceTo>
        <relationshipLabel>SWx Items (Temp Customer PO Item)</relationshipLabel>
        <relationshipName>SWx_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Entitlement_Status__c</fullName>
        <label>Temp Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Can Be Entitled</fullName>
                </value>
                <value>
                    <fullName>Entitled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cannot be entitled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Energy Efficiency</fullName>
                </value>
                <value>
                    <fullName>eNB User Capacity</fullName>
                </value>
                <value>
                    <fullName>Load Balancing</fullName>
                </value>
                <value>
                    <fullName>Air interface UL</fullName>
                </value>
                <value>
                    <fullName>Air interface DL</fullName>
                </value>
                <value>
                    <fullName>VoLTE</fullName>
                </value>
                <value>
                    <fullName>Transport / security</fullName>
                </value>
                <value>
                    <fullName>LTE Evolution</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Spectrum Use</fullName>
                </value>
                <value>
                    <fullName>NW Coverage &amp; Quality</fullName>
                </value>
                <value>
                    <fullName>WCDMA Voice Quality</fullName>
                </value>
                <value>
                    <fullName>WBTS Capacity</fullName>
                </value>
                <value>
                    <fullName>RNC Capacity</fullName>
                </value>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Load Balancing &amp; Interworking</fullName>
                </value>
                <value>
                    <fullName>3G Core Benchmark – Network Overview</fullName>
                </value>
                <value>
                    <fullName>MSS &amp; MGW Capacity</fullName>
                </value>
                <value>
                    <fullName>MSS &amp; MGW Performance</fullName>
                </value>
                <value>
                    <fullName>3G Core Voice Quality</fullName>
                </value>
                <value>
                    <fullName>3G Core Service Enablers</fullName>
                </value>
                <value>
                    <fullName>IMS VoLTE Core Benchmark – Network Overview</fullName>
                </value>
                <value>
                    <fullName>CFX-5000 &amp; TAS Capacity</fullName>
                </value>
                <value>
                    <fullName>CFX-5000 &amp; TAS Performance</fullName>
                </value>
                <value>
                    <fullName>Voice Interworking Performance</fullName>
                </value>
                <value>
                    <fullName>IMS VoLTE Core Service Enablers</fullName>
                </value>
                <value>
                    <fullName>NT-HLR Capacity</fullName>
                </value>
                <value>
                    <fullName>HSS Capacity</fullName>
                </value>
                <value>
                    <fullName>One-NDS Capacity</fullName>
                </value>
                <value>
                    <fullName>NTAS Dev Ops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SWx Items</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>SWx_Upsell_Proposal__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CSWx_UPS_000637</fullName>
        <columns>OBJECT_ID</columns>
        <columns>SWx_Upsell_Proposal__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SWx_Upsell_Proposal__c</field>
            <operation>contains</operation>
            <value>CSWx.UPS.000651</value>
        </filters>
        <label>CSWx.UPS.000651</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>OBJECT_ID</columns>
        <columns>SWx_Upsell_Proposal__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Created_Yesterday</fullName>
        <columns>OBJECT_ID</columns>
        <columns>SWx_Upsell_Proposal__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Created Yesterday</label>
    </listViews>
    <listViews>
        <fullName>Failed_SWx_Upsell_Item</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>Sales_Item_Code_SWx__c</columns>
        <columns>Feature_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Convert__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Failed SWx Upsell Item</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Items-{0000}</displayFormat>
        <label>SWx Upsell Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWx Items</pluralLabel>
    <recordTypes>
        <fullName>SWX_Upsell_Items_Readonly</fullName>
        <active>true</active>
        <description>To make swx item readonly based on DP status</description>
        <label>SWX Upsell Items Readonly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DS_Validating_Delivery_completed_field</fullName>
        <active>true</active>
        <description>Delivery completed checkbox is checked only when Acceptance Initiation is checked.</description>
        <errorConditionFormula>AND(Acceptance_Initiation__c==false, Delivery_Completed__c==true)</errorConditionFormula>
        <errorDisplayField>Delivery_Completed__c</errorDisplayField>
        <errorMessage>You can only confirm the delivery completion, once the Acceptance Initiation checkbox is ticked.</errorMessage>
    </validationRules>
</CustomObject>