src/objects/SWx_Upsell_Items__c/validationRules/DS_Validating_Delivery_completed_field.validationRule-meta.xml
<ValidationRule>
    <fullName>DS_Validating_Delivery_completed_field</fullName>
    <active>true</active>
    <description>Delivery completed checkbox is checked only when Acceptance Initiation is checked.</description>
    <errorConditionFormula>AND(Acceptance_Initiation__c==false, Delivery_Completed__c==true)</errorConditionFormula>
    <errorDisplayField>Delivery_Completed__c</errorDisplayField>
    <errorMessage>You can only confirm the delivery completion, once the Acceptance Initiation checkbox is ticked.</errorMessage>
</ValidationRule>